--- a/matala3.ipynb
+++ b/matala3.ipynb
@@ -8,8 +8,8 @@
    "source": [
     "import pandas as pd\n",
     "import requests\n",
-    "#api_key = 'YOUR_API_KEY'\n",
-    "api_key = 'Etner your API'\n",
+    "api_key = 'YOUR_API_KEY'\n",
+    "\n",
     "\n"
    ]
   },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
        "      <th>0</th>\n",
        "      <td>Istanbul</td>\n",
        "      <td>1,815 km</td>\n",
-       "      <td>1262</td>\n",
+       "      <td>21 hours 2 minutes</td>\n",
        "      <td>28.978359</td>\n",
        "      <td>41.008238</td>\n",
        "    </tr>\n",
@@ -124,7 +124,7 @@
        "      <th>1</th>\n",
        "      <td>Amsterdam</td>\n",
        "      <td>4,533 km</td>\n",
-       "      <td>2883</td>\n",
+       "      <td>48 hours 3 minutes</td>\n",
        "      <td>4.904139</td>\n",
        "      <td>52.367573</td>\n",
        "    </tr>\n",
@@ -132,7 +132,7 @@
        "      <th>2</th>\n",
        "      <td>Valletta</td>\n",
        "      <td>3,793 km</td>\n",
-       "      <td>3050</td>\n",
+       "      <td>50 hours 50 minutes</td>\n",
        "      <td>14.514100</td>\n",
        "      <td>35.899237</td>\n",
        "    </tr>\n",
@@ -140,7 +140,7 @@
        "      <th>3</th>\n",
        "      <td>Basel</td>\n",
        "      <td>4,093 km</td>\n",
-       "      <td>2642</td>\n",
+       "      <td>44 hours 2 minutes</td>\n",
        "      <td>7.588576</td>\n",
        "      <td>47.559599</td>\n",
        "    </tr>\n",
@@ -148,7 +148,7 @@
        "      <th>4</th>\n",
        "      <td>Doha</td>\n",
        "      <td>2,164 km</td>\n",
-       "      <td>1358</td>\n",
+       "      <td>22 hours 38 minutes</td>\n",
        "      <td>51.531040</td>\n",
        "      <td>25.285447</td>\n",
        "    </tr>\n",
@@ -157,15 +157,15 @@
        "</div>"
       ],
       "text/plain": [
-       "      Target Distance_km  Duration (hour+minutes)  Longitude   latitude\n",
-       "0   Istanbul    1,815 km                     1262  28.978359  41.008238\n",
-       "1  Amsterdam    4,533 km                     2883   4.904139  52.367573\n",
-       "2   Valletta    3,793 km                     3050  14.514100  35.899237\n",
-       "3      Basel    4,093 km                     2642   7.588576  47.559599\n",
-       "4       Doha    2,164 km                     1358  51.531040  25.285447"
+       "      Target Distance_km Duration (hour+minutes)  Longitude   latitude\n",
+       "0   Istanbul    1,815 km      21 hours 2 minutes  28.978359  41.008238\n",
+       "1  Amsterdam    4,533 km      48 hours 3 minutes   4.904139  52.367573\n",
+       "2   Valletta    3,793 km     50 hours 50 minutes  14.514100  35.899237\n",
+       "3      Basel    4,093 km      44 hours 2 minutes   7.588576  47.559599\n",
+       "4       Doha    2,164 km     22 hours 38 minutes  51.531040  25.285447"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,15 +176,20 @@
     "dict = {'Target' : target.split('\\n')}  \n",
     "df =  pd.DataFrame(dict)\n",
     "df['Distance_km'] = df['Target'].apply(lambda x: (get_distance(x)))\n",
-    "df['Duration (hour+minutes)'] = df['Target'].apply(lambda x: (get_duration(x)))\n",
+    "time = pd.DataFrame()\n",
+    "time['Duration (minutes)'] = df['Target'].apply(lambda x: get_duration(x))\n",
+    "time['Duration (hours)'] = time['Duration (minutes)'] // 60\n",
+    "time['Duration (minutes)'] = time['Duration (minutes)'] % 60\n",
+    "time['Duration (hour+minutes)'] = time.apply(lambda row: f\"{row['Duration (hours)']} hours {row['Duration (minutes)']} minutes\", axis=1)\n",
+    "df['Duration (hour+minutes)'] = time['Duration (hour+minutes)']\n",
     "df['Longitude'] = df['Target'].apply(lambda x: (get_longitude(x)))\n",
     "df['latitude'] = df['Target'].apply(lambda x: (get_latitude(x)))\n",
-    "df\n"
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +201,7 @@
        "Name: Target, dtype: object"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
